Update z-index with button components, fix theming

--- a/src/button/Button.module.css
+++ b/src/button/Button.module.css
@@ -7,6 +7,7 @@
     font-size: 1rem;
     padding: 0.75rem;
     position: relative;
+    z-index: 1;
 }
 
 .button:before {
